# Tengine

./: CMakeLists.txt  android_build_with_blas_from_env_armv8.sh  tcl-README.md
examples/: CMakeLists.txt
examples/benchmark_sr/: CMakeLists.txt  benchmark_sr_runtimes_only.cpp  readme.md
